# test0.2

./: README.md  pyproject.toml
sciagent/: __init__.py  cli.py  config_parser.py  diff_utils.py  run_manager.py
sciagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
train/: simple_nn.py
